--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html> 
  <html> 
    <head> 
-     <meta charset="utf-8"/> 
+     <meta charset=shift_jis"/> 
      <title>QRコードリーダー</title> 
      <style> 
        body { 
