--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
      <!-- ここにQRコードの情報を表示する --> 
      <!--p id="info"></p--> 
      <p id="info"></p> 
-     <a href="info">クリックしてください</a>
+     <a href id="info">クリックしてください</a>
       
      <script src="instascan.min.js"></script> 
      <script> 
