--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
      <!-- ここにQRコードの情報を表示する --> 
      <!--p id="info"></p--> 
      <p id="info"></p> 
-     <a href id="info">クリックしてください</a>
+     <!--a href id="info">クリックしてください</a-->
+     <a href="javascript:window.location.href=id;">hoge</a> 
       
      <script src="instascan.min.js"></script> 
      <script> 
