--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
      <!--p id="info"></p--> 
      <p id="info"></p> 
      <!--a href id="info">ƒNƒŠƒbƒN‚µ‚Ä‚­‚¾‚³‚¢</a-->
-     <a href="javascript:window.location.href=id;">hoge</a> 
+     <a href="javascript:window.location.href='id';">hoge</a> 
       
      <script src="instascan.min.js"></script> 
      <script> 
