--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
      <p id="info"></p> 
      <!--a href id="info">ƒNƒŠƒbƒN‚µ‚Ä‚­‚¾‚³‚¢</a-->
      <a href="javascript:window.location.href=info;">hoge</a> 
+     <p><a href="#info">hoge2</a></p>
       
      <script src="instascan.min.js"></script> 
      <script> 
