--- a/index.html
+++ b/index.html
@@ -28,12 +28,17 @@
      <!--a href id="info">ƒNƒŠƒbƒN‚µ‚Ä‚­‚¾‚³‚¢</a-->
      <a href="javascript:window.location.href=info;">hoge</a> 
      <p><a href="#info">hoge2</a></p>
-      
+    <a href="javascript:void(0);" onclick="jump();">hoge3</a>
+
      <script src="instascan.min.js"></script> 
      <script> 
        var videoTag = document.getElementById('preview'); 
        var info = document.getElementById('info'); 
        var scanner = new Instascan.Scanner({ video: videoTag }); 
+
+ function jump(){
+window.location.href='info';
+}
         
        scanner.addListener('scan', function (value) { 
          info.textContent = value; 
