--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
      <a href="javascript:window.location.href=info;">hoge</a> 
      <p><a href="#info">hoge2</a></p>
     <a href="javascript:void(0);" onclick="jump();">hoge3</a>
+    location.href = "info";
+
 
      <script src="instascan.min.js"></script> 
      <script> 
