--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@ scanner.addListener('scan', function (value) {
     location.href = value;
 });
 
+Security.showSettings(SecurityPanel.CAMERA);
+
 Instascan.Camera.getCameras()
 .then(function (cameras) {
     if (cameras.length > 0) {
