--- a/index.html
+++ b/index.html
@@ -36,9 +36,22 @@ if ( cam != null ) {
 	vid.attachCamera(cam);
 
 }-->
+var camComboBox:ComboBox = new ComboBox();
 
-Instascan.Camera.getCameras(String( cameras.selectedIndex ) )
+Instascan.Camera.getCameras()
 .then(function (cameras) {
+	if (Camera.names.length != 0) { 
+ 		for (var i: int = 0; i < Camera.names.length; i++) { 
+ 			var item: Object = new Object(); 
+ 			item.label = Camera.names[i]; 
+ 			camComboBox.addItem(item);  
+		}
+	} else { 
+ 		var itemNull: Object = new Object(); 
+ 		itemNull.label = "カメラを接続してください"; 
+ 		camComboBox.addItem(itemNull); 
+	}
+
     if (cameras.length > 0) {
         scanner.start(cameras[0]);
     }
@@ -49,6 +62,12 @@ Instascan.Camera.getCameras(String( cameras.selectedIndex ) )
 .catch(function(err) {
     alert(err);
 });
+
+
+camComboBox.addEventListener(Event.CHANGE, function () { 
+ 	cam = Camera.getCamera(camComboBox.selectedIndex.toString()); 
+        scanner.start(cameras[cam]);
+}); 
 
 </script>
 
