--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 <meta charset="utf-8"/>
 <title>QRコードをかざしてください</title>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/webrtc-adapter/3.3.3/adapter.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.1.10/vue.min.js"></script>
 <script src="instascan.min.js"></script>
 <style>
 body {
@@ -23,6 +25,7 @@ body {
 <video id="preview"></video>
 
 <script>
+import flash.media.Camera;
 
 var videoTag = document.getElementById('preview');
 var scanner = new Instascan.Scanner({ video: videoTag });
@@ -32,6 +35,18 @@ scanner.addListener('scan', function (value) {
 
 Instascan.Camera.getCameras()
 .then(function (cameras) {
+
+var num:int = Camera.names.length;
+trace(num);
+var camera_names:Array = Camera.names;
+
+var i:int;
+var num:int = camera_names.length;
+for(i=0;i < num;i++){
+	trace("id:" + i + " name:" + camera_names[i]);
+}
+
+
     if (cameras.length > 0) {
         scanner.start(cameras[0]);
     }
