--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@ body {
 var videoTag = document.getElementById('preview');
 var scanner = new Instascan.Scanner({ video: videoTag });
 scanner.addListener('scan', function (value) {
+var i:int;
+var num:int = cameras.length;
+for(i=0;i < cameras.length;i++){
+	alert("id:" + i + " name:" + cameras[i].name + " id " + cameras[i].id);
+}
+
     location.href = value;
 });
 
