--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <meta charset="utf-8"/>
 <title>QRコードをかざしてください</title>
 <script src="instascan.min.js"></script>
+<script src="app.js"></script>
+<link href="qr_mp2.ico" rel="shortcut icon">
 <style>
 body {
     margin: auto;
@@ -30,18 +32,15 @@ scanner.addListener('scan', function (value) {
     location.href = value;
 });
 
+
 Instascan.Camera.getCameras()
 .then(function (cameras) {
-    if (cameras.length > 0) {
         scanner.start(cameras[0]);
-    }
-    else {
-        alert('カメラが見つかりません');
-    }
 })
 .catch(function(err) {
     alert(err);
 });
+
 
 </script>
 
