--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 <title>QRコードをかざしてください</title>
 <script src="instascan.min.js"></script>
 <script src="app.js"></script>
-<link href="qr_mp2.ico" rel="shortcut icon">
+<link href="favicon.ico" rel="shortcut icon">
+<!--<link href="smph_touch_icon.png" rel="apple-touch-icon">-->
 <style>
 body {
     margin: auto;
