--- a/index.html
+++ b/index.html
@@ -4,9 +4,6 @@
 <meta charset="utf-8"/>
 <title>QRコードをかざしてください</title>
 <script src="instascan.min.js"></script>
-<script src="app.js"></script>
-<link href="../ico/favicon.ico" rel="shortcut icon">
-<!--<link href="smph_touch_icon.png" rel="apple-touch-icon">-->
 <style>
 body {
     margin: auto;
@@ -33,15 +30,18 @@ scanner.addListener('scan', function (value) {
     location.href = value;
 });
 
-
 Instascan.Camera.getCameras()
 .then(function (cameras) {
+    if (cameras.length > 0) {
         scanner.start(cameras[0]);
+    }
+    else {
+        alert('カメラが見つかりません');
+    }
 })
 .catch(function(err) {
     alert(err);
 });
-
 
 </script>
 
